k8s/allow-postgres-egress-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-postgres-egress
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
